profilelist1exp/unpackaged/objects/Territory_Sales_User_Assignment__c.object
<CustomObject>
    <description>This object is to create and maintain the assignments between the user, role and territory for the teams that uses geography based owner assignment process for the relationship leads and Account Plays.</description>
    <fields>
        <fullName>Assignable__c</fullName>
        <formula>IF(AND(Role__r.Is_Active__c = TRUE, User__r.IsActive = TRUE, Territory__r.Is_Active__c =TRUE, Is_Active__c = TRUE),&quot;Yes&quot;,

IF(AND(Role__r.Is_Active__c = TRUE, User__r.IsActive = TRUE, Territory__r.Is_Active__c =FALSE),&quot;No:&quot; &amp; BR()&amp; &quot;Territory - Inactive&quot;,

IF(AND(Role__r.Is_Active__c = FALSE, User__r.IsActive = TRUE, Territory__r.Is_Active__c =TRUE),&quot;No:&quot; &amp; BR()&amp; &quot;Role - Inactive&quot;,

IF(AND(Role__r.Is_Active__c = TRUE, User__r.IsActive = FALSE, Territory__r.Is_Active__c =TRUE),&quot;No:&quot; &amp; BR()&amp; &quot;User - Inactive&quot;,

IF(AND(Role__r.Is_Active__c = FALSE, User__r.IsActive = FALSE, Territory__r.Is_Active__c =FALSE),&quot;No:&quot; &amp; BR()&amp; &quot;Role, Territory and User - Inactive&quot;,

IF(AND(Role__r.Is_Active__c = TRUE, User__r.IsActive = FALSE, Territory__r.Is_Active__c =FALSE), &quot;No:&quot; &amp; BR()&amp; &quot;Territory and User - Inactive&quot;,

IF(AND(Role__r.Is_Active__c = FALSE, User__r.IsActive = FALSE, Territory__r.Is_Active__c =TRUE), &quot;No:&quot; &amp; BR()&amp; &quot;Role and User - Inactive&quot;, 

IF(AND(Role__r.Is_Active__c = FALSE, User__r.IsActive = TRUE, Territory__r.Is_Active__c =FALSE),&quot;No:&quot; &amp; BR()&amp; &quot;Territory and Role - Inactive&quot;,
&quot;No&quot;)
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Client Computing</fullName>
                </value>
                <value>
                    <fullName>Dell Data Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Role__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Group__c</field>
                <operation>equals</operation>
                <valueField>Role__c.Group__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Territory Sales User Assignments</relationshipLabel>
        <relationshipName>Territory_Sales_User_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Role__c</fullName>
        <label>Territory Role</label>
        <length>90</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Territory</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or the record is inactive.</errorMessage>
            <filterItems>
                <field>Territory__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Group__c</field>
                <operation>equals</operation>
                <valueField>Territory__c.Group__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Territory Sales User Assignments</relationshipLabel>
        <relationshipName>Territory_Sales_User_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>User does not exist or inactive.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_Sales_User_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory Sales User Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>Territory__c</columns>
        <columns>User__c</columns>
        <columns>Assignable__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Sales User Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Group_is_required</fullName>
        <active>true</active>
        <description>This rule is to make the Group field required when created through API</description>
        <errorConditionFormula>ISPICKVAL(Group__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Group__c</errorDisplayField>
        <errorMessage>Group is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Role_Territory_or_Group_cannot_be_change</fullName>
        <active>true</active>
        <description>Role, Territory and Group in the ‘Territory Sales User Assignment’ can not be changed once the record is saved</description>
        <errorConditionFormula>ISCHANGED( Role__c ) || ISCHANGED( Territory__c ) || ISCHANGED( Group__c)</errorConditionFormula>
        <errorMessage>Role, Territory or Group cannot be changed once the record is saved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_cannot_be_changed_for_Inactive_reco</fullName>
        <active>true</active>
        <description>This rule is avoid changing the User when the record is Inactive.</description>
        <errorConditionFormula>(Is_Active__c = FALSE || PRIORVALUE(Is_Active__c) = FALSE ) &amp;&amp;  ISCHANGED( User__c)</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>User cannot be changed when the record is Inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_is_required</fullName>
        <active>true</active>
        <description>This rule is to make the User field required when created through API</description>
        <errorConditionFormula>ISBLANK(User__c )</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>User is required!!</errorMessage>
    </validationRules>
</CustomObject>